test/types/imag/opequals2.4.good
opequals2.chpl:8: error: Cannot assign to imag(64) from real(64)
